add half fucntionality about costomization-product

--- a/src/components/atoms-store/mw-store-product-details/mw-store-product-detail-counter/MWStoreProductDetailCounter.module.scss
+++ b/src/components/atoms-store/mw-store-product-details/mw-store-product-detail-counter/MWStoreProductDetailCounter.module.scss
@@ -1,5 +1,5 @@
 .mw-store-product-detail-counter {
-  display: flex;
+  display: inline-flex;
   align-items: center;
   gap: var(--helio-space-XS);
 
