--- a/src/components/atoms-store/mw-store-product-details/mw-store-product-detail-descr/MWStoreProductDetailDescr.module.scss
+++ b/src/components/atoms-store/mw-store-product-details/mw-store-product-detail-descr/MWStoreProductDetailDescr.module.scss
@@ -4,7 +4,7 @@
   font-weight: 300;
   line-height: 1.6;
 
-  margin-bottom: var(--helio-space-XL);
+  // margin-bottom: var(--helio-space-XL);
   overflow: hidden;
 
   &__text {
