--- a/src/components/atoms-store/store-cart-message/StoreCartMessage.module.scss
+++ b/src/components/atoms-store/store-cart-message/StoreCartMessage.module.scss
@@ -12,30 +12,6 @@
   opacity: 1;
   transition: opacity 0.4s;
 
-  .progress-line {
-    width: 100%;
-    height: 3px;
-
-    border-radius: 8px;
-    height: 4px;
-
-    background-color: #e9f8f5;
-
-    transition: width 1s ease;
-
-    top: 0;
-    left: 0;
-    position: absolute;
-
-    z-index: 1;
-  }
-
-  .progress-line__percentage {
-    background-color: var(--color-accent);
-    z-index: 2;
-    width: var(--percentage);
-  }
-
   &__content {
     display: flex;
     justify-content: center;
@@ -47,7 +23,31 @@
 }
 
 .store-cart-message--hidden {
+  cursor: initial;
   transition-delay: 0.7s;
-  // transition: opacity 0.4s;
   opacity: 0;
+}
+
+.progress-line {
+  width: 100%;
+  height: 3px;
+
+  border-radius: 8px;
+  height: 4px;
+
+  background-color: #e9f8f5;
+
+  transition: width 1s ease;
+
+  top: 0;
+  left: 0;
+  position: absolute;
+
+  z-index: 1;
+}
+
+.progress-line__percentage {
+  background-color: var(--color-accent);
+  z-index: 2;
+  width: var(--percentage);
 }
